# practice-django-sharegram-code

./: db.sqlite3  main.py  pyproject.toml
config/: settings.py  urls.py
links/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
links/migrations/: 0001_initial.py
links/templates/links/: link_confirm_delete.html  link_create.html  link_detail.html  link_list.html
posts/: forms.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py  0003_like.py  0004_follow.py
posts/templates/posts/: comment_confirm_delete.html  following_feed.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  welcome.html
posts/templates/posts/includes/: post_card.html
static/css/: style.css
templates/: base.html
templates/includes/: navbar.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_bio_max_length_constraint.py
users/templates/users/: edit_profile.html  login.html  logout.html  profile.html  register.html
users/tests/: conftest.py  test_models.py
