[project]
name = "practice-django-sharegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crispy-bootstrap5>=2025.6",
    "django>=6.0.2",
    "pillow>=12.1.1",
    "pytest-django>=4.12.0",
]
